[gd_scene load_steps=5 format=3 uid="uid://vlya0x67u1v4"]

[ext_resource type="Script" path="res://scenes/event_result.gd" id="1_ml2od"]
[ext_resource type="Theme" uid="uid://cbawpf1b7g0f5" path="res://score_theme.tres" id="2_fc3nt"]
[ext_resource type="Texture2D" uid="uid://b4acw0n0dyecq" path="res://assets/icons/ui/gold_star.png" id="3_n78nh"]
[ext_resource type="Texture2D" uid="uid://d0gwd5ithi3w1" path="res://assets/icons/ui/gray_star.png" id="4_3jp6b"]

[node name="EventResult" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ml2od")
score = 21

[node name="Score" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -35.0
offset_top = -88.0
offset_right = 36.0
theme = ExtResource("2_fc3nt")
text = "12"
fit_content = true
scroll_active = false
autowrap_mode = 0
metadata/_edit_group_ = true

[node name="GrayStar1" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-66.5, 68)
texture = ExtResource("4_3jp6b")
metadata/_edit_group_ = true

[node name="GrayStar2" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(1.5, 41)
texture = ExtResource("4_3jp6b")
metadata/_edit_group_ = true

[node name="GrayStar3" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(69.5, 69)
texture = ExtResource("4_3jp6b")
metadata/_edit_group_ = true

[node name="Star1" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-66.5, 68)
texture = ExtResource("3_n78nh")
metadata/_edit_group_ = true

[node name="Star2" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(1.5, 41)
texture = ExtResource("3_n78nh")
metadata/_edit_group_ = true

[node name="Star3" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(69.5, 69)
texture = ExtResource("3_n78nh")
metadata/_edit_group_ = true
